--- a/src/css/category.css
+++ b/src/css/category.css
@@ -3,61 +3,204 @@
 @import "./font-awesome.css";
 
 /* 전체 레이아웃 */
-#wrap { width: 100%; }
-#header { width: 100%; }
-#main { width: 100%; }
-
+#wrap {
+    width: 100%;
+}
+#header {
+    width: 100%;
+}
+#main {
+    width: 100%;
+}
 
 /* 공용 컨테이너 */
-.container { width: 950px; margin: 0 auto; }
-
+.container {
+    width: 950px;
+    margin: 0 auto;
+}
 
 /* 레이아웃 여백 */
 
-
 /* 헤더 */
-#header .row { display: flex; justify-self: center; align-items: center; padding: 20px 0;}
+#header .row {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    padding: 20px 0;
+}
 
-.header { display: flex; justify-content:space-between; align-items: center; flex-wrap: nowrap;}
-.header-logo h1 { color: #606DB8; font-size: 40px; letter-spacing: 0.1em; font-weight: bold;}
-.header-nav-list ul { margin-left: 104px;}
-.header-nav-list ul li { display: inline-block; position: relative; padding: 20px 32px; }
-.header-nav-list ul li:hover a:before { opacity: 1; }
-.header-nav-list ul li:hover a { color: #000; }
-.header-nav-list ul li:before { content: ""; width: 2px; height: 25%; background-color: #dedede; position: absolute; right: 0; top: 24px;}
-.header-nav-list ul li:last-child:before { display: none;}
-.header-nav-list ul li a { position: relative; font-size: 18px; font-weight: 500; color: darkgray;}
-.header-nav-list ul li a:before { content:""; width: 100%; height: 2px; background-color: #606DB8; position: absolute; bottom: -8px; opacity: 0; transition: all 0.3s ease-in-out;}
-
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+.header-logo h1 {
+    color: #606db8;
+    font-size: 40px;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+}
+.header-nav-list ul {
+    margin-left: 104px;
+}
+.header-nav-list ul li {
+    display: inline-block;
+    position: relative;
+    padding: 20px 32px;
+}
+.header-nav-list ul li:hover a:before {
+    opacity: 1;
+}
+.header-nav-list ul li:hover a {
+    color: #000;
+}
+.header-nav-list ul li:before {
+    content: "";
+    width: 2px;
+    height: 25%;
+    background-color: #dedede;
+    position: absolute;
+    right: 0;
+    top: 24px;
+}
+.header-nav-list ul li:last-child:before {
+    display: none;
+}
+.header-nav-list ul li a {
+    position: relative;
+    font-size: 18px;
+    font-weight: 500;
+    color: darkgray;
+}
+.header-nav-list ul li a:before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #606db8;
+    position: absolute;
+    bottom: -8px;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+}
 
 /* 초기 display */
 
-.on { display: block; }
-.fix_modal.on, .order_modal.on { display: block;}
-.update_modal.on {display: block;}
+.on {
+    display: block;
+}
+.fix_modal.on,
+.order_modal.on {
+    display: block;
+}
+.update_modal.on {
+    display: block;
+}
 
 /* 카테고리 등록*/
-section h2 { font-size: 24px; color:#606DB8; font-weight: 400; }
+section h2 {
+    font-size: 24px;
+    color: #606db8;
+    font-weight: 400;
+}
 
-.category-list { display: flex; justify-content: space-between; align-items: center; margin: 6px 0; gap: 10px;}
-.category .row > div:last-child { padding-bottom: 24px; }
+.category-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 6px 0;
+    gap: 10px;
+}
+.category .row > div:last-child {
+    padding-bottom: 24px;
+}
 
-.category-list-title h3 { position: relative; font-size: 22px; font-weight: 400; padding-left: 22px;}
-.category-list-title h3:before { content:"→"; color: #606DB8; position: absolute; top: 0; left: -12px;}
-.category-list-button button { margin: 0 4px; padding: 7px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
+.category-list-title h3 {
+    position: relative;
+    font-size: 22px;
+    font-weight: 400;
+    padding-left: 22px;
+}
+.category-list-title h3:before {
+    content: "→";
+    color: #606db8;
+    position: absolute;
+    top: 0;
+    left: -12px;
+}
+.category-list-button button {
+    margin: 0 4px;
+    padding: 7px 20px;
+    background-color: #606db8;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 5px;
+}
 
-.category-add { display: flex; justify-content: space-between; align-items: center; margin-top: 24px;}
-.category-add input { width: 60%; height: 38px;}
-.category-add button, .category-update button { width: 16.5%; margin: 0 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
+.category-add {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 24px;
+}
+.category-add input {
+    width: 60%;
+    height: 45px;
+}
+.category-add button,
+.category-update button {
+    width: 16.5%;
+    margin: 0 4px;
+    padding: 12px 20px;
+    background-color: #606db8;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 5px;
+}
 
-.category-update { display: flex; justify-content: space-between; align-items: center; margin-top: 12px;}
-.category-update input { width: 28%; height: 38px;}
-.category-update .new-category { margin-left: -178px;}
+.category-update {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    position: relative;
+}
+.category-update input {
+    width: 25%;
+    height: 50px;
+}
+.category-update .new-category {
+    margin-left: -120px;
+}
+
+.fa-arrow-right {
+    color: #606db8;
+    position: absolute;
+    font-size: 30px;
+    left: 290px;
+}
 
 /* 상품 관리 */
-.main-product-list > div { display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid lightgray;}
-.header-text-product { font-size: 25px; font-weight: 500; padding: 20px 0px 20px 0px; }
-.add-product-button {width: 16.5%; margin: 0 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
+.main-product-list > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid lightgray;
+}
+.header-text-product {
+    font-size: 25px;
+    font-weight: 500;
+    padding: 20px 0px 20px 0px;
+}
+.add-product-button {
+    width: 16.5%;
+    margin: 0 4px;
+    padding: 8px 20px;
+    background-color: #606db8;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 5px;
+}
 .admin-book-list {
     display: inline-flex;
     flex-direction: column;
@@ -179,42 +322,173 @@ section h2 { font-size: 24px; color:#606DB8; font-weight: 400; }
     color: #606db8;
     line-height: 16px;
 }
-.admin-button { margin-left: 360px; display: flex; align-items: center;}
-.admin-button-area { display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.admin-button-area button { width: 84px; margin: 6px 4px; padding: 8px 20px; background-color: #606DB8; font-size: 14px; color: #fff; border-radius: 5px;}
-.admin-button-area p { width: 84px; margin: 6px 4px; padding: 8px 20px; background-color: #dedede; font-size: 14px; color: #000; border-radius: 5px; text-align: center; padding: 8px 4px; }
-
+.admin-button {
+    margin-left: 360px;
+    display: flex;
+    align-items: center;
+}
+.admin-button-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.admin-button-area button {
+    width: 84px;
+    margin: 6px 4px;
+    padding: 8px 20px;
+    background-color: #606db8;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 5px;
+}
+.admin-button-area p {
+    width: 84px;
+    margin: 6px 4px;
+    padding: 8px 20px;
+    background-color: #dedede;
+    font-size: 14px;
+    color: #000;
+    border-radius: 5px;
+    text-align: center;
+    padding: 8px 4px;
+}
 
 /* 주문,배송 관리 */
-.header-nav-list { display: flex; justify-content: center; align-items: center;}
-.admin-order-button { margin-left: 200px; display: flex; align-items: center;}
-.admin-order-info { width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: flex-start;};
-.admin-order { display: flex;
+.header-nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.admin-order-button {
+    margin-left: 200px;
+    display: flex;
+    align-items: center;
+}
+.admin-order-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.admin-order {
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 80%;}
-.order_modal { width: 47vh; height: 40vh; position: absolute; top: 550px; left: 450px; display: none; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2;}
-.order_modal select { margin-left: 24px;}
-.order_modal select:focus { outline: 2px solid #606DB8;}
-.admin-order { display: flex; flex-direction: column; justify-content: center; align-items: flex-start; width: 80%;}
-.admin-order b { margin-right: 10px;}
+    width: 80%;
+}
+.order_modal {
+    width: 47vh;
+    height: 40vh;
+    position: absolute;
+    top: 550px;
+    left: 450px;
+    display: none;
+    border: 2px solid lightgray;
+    border-radius: 20px;
+    background-color: #fff;
+    z-index: 2;
+}
+.order_modal select {
+    margin-left: 24px;
+}
+.order_modal select:focus {
+    outline: 2px solid #606db8;
+}
+.admin-order {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 80%;
+}
+.admin-order b {
+    margin-right: 10px;
+}
 
 /* 상품등록, 수정 modal */
-.fix_modal, .update_modal { display: none; width: 50%; height: 85vh; position: fixed; top: 80px; left: 394px; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2;}
-.modal-container { width: 100%;}
-.modal-container .row { padding: 50px 50px 50px 26px;}
-.modal-title { margin-left: 26px; border-bottom: 2px solid lightgray;}
-.modal-title h2 { font-size: 24px; color:#606DB8; font-weight: 400;}
-.modal-cont { margin-top: 2rem;}
-.modal-cont input { width: 80%; }
-.modal-cont div { display: flex; justify-content: space-between; align-items: center; padding: 12px 0;}
-.modal-cont div:nth-child(4) { justify-content: flex-start;}
-.modal-cont div:nth-child(4) select { margin-left: 25px; width: 16%; height: 35px;}
-.modal-cont div:last-child { align-items:flex-start; }
-.modal-cont div:last-child input { height: 258px; }
-.modal-cont div label { padding-left: 12px; }
-#modal-book-info { width: 80%; height: 108px; padding: 4px 15px; display: block; background: #fff; border-radius: 4px; border: solid 1px #ddd; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
-#modal-book-info:focus { outline: 2px solid #606DB8;}
-.modal-button { text-align: center;}
-.modal-button button { padding: 4px 20px; background-color: #606DB8; font-size: 18px; font-weight: 400; color: #fff; border-radius: 5px;}
+.fix_modal,
+.update_modal {
+    display: none;
+    width: 50%;
+    height: 85vh;
+    position: fixed;
+    top: 80px;
+    left: 394px;
+    border: 2px solid lightgray;
+    border-radius: 20px;
+    background-color: #fff;
+    z-index: 2;
+}
+.modal-container {
+    width: 100%;
+}
+.modal-container .row {
+    padding: 50px 50px 50px 26px;
+}
+.modal-title {
+    margin-left: 26px;
+    border-bottom: 2px solid lightgray;
+}
+.modal-title h2 {
+    font-size: 24px;
+    color: #606db8;
+    font-weight: 400;
+}
+.modal-cont {
+    margin-top: 2rem;
+}
+.modal-cont input {
+    width: 80%;
+}
+.modal-cont div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
+}
+.modal-cont div:nth-child(4) {
+    justify-content: flex-start;
+}
+.modal-cont div:nth-child(4) select {
+    margin-left: 25px;
+    width: 16%;
+    height: 35px;
+}
+.modal-cont div:last-child {
+    align-items: flex-start;
+}
+.modal-cont div:last-child input {
+    height: 258px;
+}
+.modal-cont div label {
+    padding-left: 12px;
+}
+#modal-book-info {
+    width: 80%;
+    height: 108px;
+    padding: 4px 15px;
+    display: block;
+    background: #fff;
+    border-radius: 4px;
+    border: solid 1px #ddd;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+#modal-book-info:focus {
+    outline: 2px solid #606db8;
+}
+.modal-button {
+    text-align: center;
+}
+.modal-button button {
+    padding: 4px 20px;
+    background-color: #606db8;
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
+    border-radius: 5px;
+}
