--- a/src/css/book_category.css
+++ b/src/css/book_category.css
@@ -159,6 +159,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 17px;
 }
 
 .nav-side-category-bar {
@@ -178,7 +179,7 @@
     padding: 16px 4px;
     margin: 0 20px;
     border-radius: 20px;
-    color: darkgray;
+    color: #858585;
     transition: all 0.3 ease-in;
 }
 
@@ -212,7 +213,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    max-width: 710px;
+    max-width: 880px;
     margin-top: 30px;
 }
 
@@ -221,8 +222,7 @@
     align-items: center;
     width: 100%;
     height: 54px;
-    padding: 12px 22px;
-    margin-top: 42px;
+    padding: 8px 22px;
     font-weight: 700;
     font-size: 24px;
     line-height: 25px;
@@ -242,7 +242,7 @@
     display: inline-flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 28px;
     margin-bottom: 60px;
 }
 
@@ -263,8 +263,9 @@
 
 .category-book-item-img-area {
     display: flex;
-    width: 120px;
+    width: 220px;
     margin-right: 30px;
+    margin-left: 25px;
 }
 
 .category-book-img-link {
@@ -283,7 +284,7 @@
     justify-content: center;
     align-items: start;
     width: 100%;
-    padding-right: 30px;
+    padding-right: 50px;
 }
 
 .category-book-item-title-head {
@@ -292,16 +293,16 @@
 }
 
 .category-book-item-title {
-    margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 16px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 18px;
     color: #141414;
-    line-height: 19px;
+    line-height: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: keep-all;
     white-space: normal;
-    max-height: calc(19px * 1);
+    max-height: calc(20px * 1);
 }
 
 .category-book-item-output {
@@ -507,6 +508,30 @@
 
 .confirm-button {
     background-color: #606db8;
+}
+
+/* top으로 스크롤 되는 버튼 */
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 60px;
+    right: 40px;
+    width: 45px;
+    height: 45px;
+    border-radius: 100px;
+    color: #9e9e9e;
+    background-color: white;
+    filter: drop-shadow(0 0 3px grey);
+    transition: opacity 0.7s ease-in-out;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll-to-top > p {
+    font-size: 13px;
+    font-weight: 500;
 }
 
 /* 푸터 css */
